<resources>
    <string name="app_name">Real EXP</string>
    <string name="action_settings">Settings</string>
    <string name ="checklist">CheckList</string>
    <string name ="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="tdtitle">Title</string>
    <string name="tddescription">Description</string>
    <string name="tdtype">Type</string>
    <string name="tddifficulty">Difficulty</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="displayDate">Month Day Year</string>
    <string name="displayTime">00:00 AM/PM</string>
    <string name="edit_button_text">Edit</string>
    <string name="delete_button_text">Delete</string>
    <string name="complete_button_text">Complete</string>
    <string name="view_button_text">View</string>

    <string-array name="Difficulty">
        <item>Pick a Difficulty</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="Type">
        <item>Pick a Type</item>
        <item>Math</item>
        <item>Cooking</item>
        <item>English</item>
        <item>Sports</item>
        <item>Exercise</item>
        <item>Club</item>
        <item>Science</item>
        <item>Social Studies</item>
        <item>Event</item>
        <item>Other</item>
    </string-array>
</resources>
